--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Надо сделать идеально">
     <meta property="og:url" content="http://127.0.0.1:5500/index.html">
     <meta property="og:image" content="./images/og.png">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./fonts/font.css">
     <link rel="icon" href="./images/icon.ico" sizes="any">
     <link rel="icon" href="./images/icon.svg" type="images/svg+xml">
